fix(ambulance): spacing

--- a/assets/css/ambulance.css
+++ b/assets/css/ambulance.css
@@ -87,6 +87,7 @@
   }
   .ambulance .title {
     font-size: 20px;
+    line-height: 25.3px;
   }
   .ambulance-right {
     width: 300px;
